--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,7 @@
 # Example environment variables for AI-WEB backend
 SUPABASE_SERVICE_ROLE_KEY=YOUR_SUPABASE_SERVICE_ROLE_KEY
 OPENAI_API_KEY=YOUR_OPENAI_API_KEY
+# Modello OpenAI da utilizzare (es. gpt-4o-mini, gpt-4)
 OPENAI_MODEL=gpt-4o-mini
 PORT=3001
 SUPABASE_URL=https://your-supabase-project.supabase.co
