--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "vitest"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.5",
@@ -17,9 +18,12 @@
     "multer": "^1.4.5-lts.1",
     "openai": "^3.2.1",
     "pdf-parse": "^1.1.1",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "tesseract.js": "^4.0.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "supertest": "^6.3.3",
+    "vitest": "^1.5.0"
   }
 }
